--- a/Szperacz.Core/Szperacz.Core.csproj
+++ b/Szperacz.Core/Szperacz.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronPython" Version="2.7.11" />
     <PackageReference Include="MvvmCross" Version="7.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="3.0.1" />
