--- a/XUnitTestLibrary/XUnitTestLibrary.csproj
+++ b/XUnitTestLibrary/XUnitTestLibrary.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Szperacz.Core\Szperacz.Core.csproj" />
+  </ItemGroup>
+
 </Project>
